// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Damage calculateDamage Great Sword 1`] = `
[
  {
    "elementalDamage": 0.675,
    "koDamage": undefined,
    "rawDamage": 144.78750000000002,
    "totalDamage": 145,
  },
]
`;

exports[`Damage calculateDamage Hammer 1`] = `
[
  {
    "elementalDamage": 0.675,
    "koDamage": 0,
    "rawDamage": 22.5,
    "totalDamage": 23,
  },
  {
    "elementalDamage": 0.675,
    "koDamage": 72,
    "rawDamage": 85.49999999999999,
    "totalDamage": 86,
  },
]
`;

exports[`Damage calculateDamage Lance Cut hitzone 1`] = `
[
  {
    "elementalDamage": 2.025,
    "koDamage": undefined,
    "rawDamage": 25.515000000000004,
    "totalDamage": 27,
  },
  {
    "elementalDamage": 2.025,
    "koDamage": undefined,
    "rawDamage": 25.515000000000004,
    "totalDamage": 27,
  },
  {
    "elementalDamage": 2.025,
    "koDamage": undefined,
    "rawDamage": 27.337500000000002,
    "totalDamage": 29,
  },
]
`;

exports[`Damage calculateDamage Lance Modified impact hitzone 1`] = `
[
  {
    "elementalDamage": 2.7,
    "koDamage": undefined,
    "rawDamage": 47.17440000000001,
    "totalDamage": 49,
  },
  {
    "elementalDamage": 2.7,
    "koDamage": undefined,
    "rawDamage": 47.17440000000001,
    "totalDamage": 49,
  },
  {
    "elementalDamage": 2.7,
    "koDamage": undefined,
    "rawDamage": 50.54400000000001,
    "totalDamage": 53,
  },
]
`;

exports[`Damage calculateDamage Longsword Deviljho Spirit Gauge RED 1`] = `
[
  {
    "elementalDamage": 14.804999999999998,
    "koDamage": undefined,
    "rawDamage": 66.63384,
    "totalDamage": 81,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge NONE 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 37.06965,
    "totalDamage": 39,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge RED 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 48.190545,
    "totalDamage": 50,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge WHITE 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 38.9231325,
    "totalDamage": 41,
  },
]
`;

exports[`Damage calculateDamage Longsword Spirit Gauge YELLOW 1`] = `
[
  {
    "elementalDamage": 2.115,
    "koDamage": undefined,
    "rawDamage": 40.776615,
    "totalDamage": 42,
  },
]
`;

exports[`Damage calculateDamage Switch Axe Element phial 1`] = `
[
  {
    "elementalDamage": 2.0250000000000004,
    "koDamage": undefined,
    "rawDamage": 30.982499999999998,
    "totalDamage": 33,
  },
]
`;

exports[`Damage calculateDamage Switch Axe Power phial 1`] = `
[
  {
    "elementalDamage": 3.54375,
    "koDamage": undefined,
    "rawDamage": 35.974125,
    "totalDamage": 39,
  },
]
`;

exports[`Damage calculateDamage Sword and Shield Cut attack 1`] = `
[
  {
    "elementalDamage": 1.6650000000000003,
    "koDamage": undefined,
    "rawDamage": 15.4548,
    "totalDamage": 17,
  },
]
`;

exports[`Damage calculateDamage Sword and Shield Impact attack 1`] = `
[
  {
    "elementalDamage": 1.6650000000000003,
    "koDamage": 22.5,
    "rawDamage": 8.1,
    "totalDamage": 9,
  },
  {
    "elementalDamage": 1.6650000000000003,
    "koDamage": 22.5,
    "rawDamage": 12.149999999999999,
    "totalDamage": 13,
  },
]
`;
